@@ -1,5 +1,8 @@
 ; This file is generated from dist.ini.meta by dzil bakeini.
 ; Edit that file or the bundles contained within for long-term changes.
+; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.014000 at Mon Jun  2 16:31:23 2014
+; vim: syntax=dosini
+; Uncomment this to bootstrap via self
 name = Dist-Zilla-Util-ExpandINI
 author = Kent Fredric <kentnl@cpan.org>
 license = Perl_5
@@ -155,6 +158,7 @@ modules = Dist::Zilla::PluginBundle::Author::KENTNL
 modules = Dist::Zilla::App::Command::bakeini
 
 [Prereqs / @Author::KENTNL/::Role::BundleDeps]
+; auto_prereqs_skip = File::Find
 -phase = develop
 -relationship = requires
 Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.001001
