@@ -1,13 +1,15 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
-0.001004
+0.002000
  [Added / configure requires]
  - perl 5.008
 
  [Added / runtime requires]
+ - Module::Runtime
  - Scalar::Util
 
  [Added / test requires]
+ - Test::Differences
  - perl 5.008
 
 0.001003 2014-08-15T22:30:33Z
