@@ -9,7 +9,12 @@ Release history for Dist-Zilla-Util-ExpandINI
  - Dependencies changed since 0.001003, see misc/*.deps* for details
  - configure: +1 (recommends: ↑1)
  - develop: +7 ↑2 -1 (recommends: +1, suggests: ↑2)
- - test: +1 (recommends: ↑2)
+ - runtime: +2
+ - test: +2 (recommends: ↑2)
+
+ [Features]
+ - Comments are preserved in some way, though they may move around a bit.
+ - This is mostly to support transferral of authordeps. ( kentnl/Dist-Zilla-App-Command-bakeini#1 )
 
  [Metadata]
  - author = kentnl
